force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/fields/AVA_MAPPER__Log_Message__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Log_Message__c</fullName>
    <description>A brief summary message of the exception results and possible debug suggestions</description>
    <inlineHelpText>A brief summary message of the exception results and possible debug suggestions</inlineHelpText>
    <label>Log Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>