force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/fields/AVA_MAPPER__Response_Log__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Response_Log__c</fullName>
    <description>The tax call results sent back from AvaTax to Salesforce and the connector</description>
    <inlineHelpText>The tax call results sent back from AvaTax to Salesforce and the connector</inlineHelpText>
    <label>Response Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>