force-app/main/default/objects/AVA_MAPPER__AvaTax_Log__c/fields/AVA_MAPPER__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Stack_Trace__c</fullName>
    <description>A report of the active stack frames involved at the time of execution</description>
    <inlineHelpText>A report of the active stack frames involved at the time of execution</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>